[WO-348] Fix cursor over scrollbar

--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -49,7 +49,6 @@ textarea {
     background: $color-grey-lighter;
     border: 3px solid transparent;
     background-clip: content-box;
-    cursor: pointer !important;
     &:hover {
         background-color: $color-blue;
     }
