--- a/src/sass/views/_write.scss
+++ b/src/sass/views/_write.scss
@@ -140,7 +140,6 @@
     .body {
         flex-grow: 1;
         line-height: 1.5em;
-        cursor: text;
         overflow-y: scroll;
 
         *[contentEditable] {
